name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/farrellm/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          farrellm@alum.mit.edu
copyright:           2015 Matthew Farrell
category:            Application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       MissingH >= 1.3.0.1
                     , aeson
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , bytestring
                     , containers
                     , mtl
                     , parsec
                     , primitive
                     , split
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       advent
                     , base
                     , unordered-containers
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       advent
                     , base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/advent
